--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -26,7 +26,7 @@ body,
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
   overflow: auto;
   scrollbar-gutter: stable;
 }
