--- a/src/components/BtnContinue/BtnContinue.module.scss
+++ b/src/components/BtnContinue/BtnContinue.module.scss
@@ -24,6 +24,7 @@
     border: none;
     background-color: $color-accent;
     color: $color-surface;
+    @include font-semibold(16px, 1.5, 0);
 
 }
 
