--- a/src/components/Counter/Counter.module.scss
+++ b/src/components/Counter/Counter.module.scss
@@ -1,3 +1,7 @@
 @use "/src/styles/Variables.scss" as *;
 @use "/src/styles/Mixins.scss" as *;
 @use "/src/styles/Fonts.scss" as *;
+
+.counter {
+    @include font-regular(14px, 1.5, 0);
+}
