--- a/src/styles/Mixins.scss
+++ b/src/styles/Mixins.scss
@@ -1,6 +1,3 @@
-
-
-
 @mixin flex($justify: center, $align: center, $direction: row, $gap: 0) {
     display: flex;
     justify-content: $justify;
@@ -19,4 +16,26 @@
 @mixin max-width ($max-width: 768px, $padding:16px 120px){
     max-width: $max-width;
     padding: $padding;
+}
+
+
+@mixin font-regular($size: 16px, $lineHeight: 1.5, $letterSpacing: 0) {
+    font-family: 'NotoSans-Regular', sans-serif;
+    font-size: $size;
+    line-height: $lineHeight;
+    letter-spacing: $letterSpacing;
+}
+
+@mixin font-semibold($size: 16px, $lineHeight: 1.5, $letterSpacing: 0px) {
+    font-family: 'NotoSans-SemiBold', sans-serif;
+    font-size: $size;
+    line-height: $lineHeight;
+    letter-spacing: $letterSpacing;
+}
+
+@mixin font-black($size: 24px, $lineHeight: 1.5, $letterSpacing: 0px) {
+    font-family: 'NotoSans-Black', sans-serif;
+    font-size: $size;
+    line-height: $lineHeight;
+    letter-spacing: $letterSpacing;
 }
