--- a/src/components/MovieDetail/MovieDetail.module.scss
+++ b/src/components/MovieDetail/MovieDetail.module.scss
@@ -2,7 +2,14 @@
 @use "/src/styles/Mixins.scss" as *;
 @use "/src/styles/Fonts.scss" as *;
 
-.movieList {
+
+@use "/src/styles/Variables.scss" as *;
+@use "/src/styles/Mixins.scss" as *;
+@use "/src/styles/Fonts.scss" as *;
+
+
+
+.movieItem {
     @include max-width (768px, 16px 120px);
     @media (max-width: 768px) {
             @include max-width(768px, 20px 40px);
@@ -12,23 +19,15 @@
         @media (max-width: 480px) {
             @include max-width(480px, 16px 20px);
         }
-}
-
-.movie-results {
-    justify-content: normal;
-}
-
-.movieItem {
     @include flex(center, center, column, 0);
     box-sizing: border-box;
     text-align: center;
-    border-bottom: 1px solid $color-border-default;
     width: 100%;
-    margin: 64px auto;
-    cursor: pointer;
+    margin: 0 auto;
 
 
 }
+
 .poster {
     @include max-width (304px, 0 0);
     border-radius: 16px;
@@ -37,7 +36,7 @@
 
     @media (max-width: 768px) {
         @include max-width(304px, 0 0);
-    
+
     }
 
 
@@ -49,19 +48,22 @@
 .title {
     margin: 0 0 8px 0;
     @include font-black(32px, 1.6, 0);
+
     @media (max-width: 768px) {
         @include font-black(32px, 1.6, 0);
-    
-        }
-        @media (max-width: 480px) {
-            @include font-black(24px, 1.6, 0);
-        }
-}
-.year {
-    @include font-regular(16px, 1.5, 0);
-    margin-bottom: 8px;
-}
-.movieItem:last-child {
-    border: none;
+
+    }
+
+    @media (max-width: 480px) {
+        @include font-black(24px, 1.6, 0);
+    }
 }
 
+.year, .director, .actors, .plot {
+    @include font-regular(16px, 1.5, 0);
+    margin-bottom: 8px;
+    border-bottom: 1px solid $color-border-default;
+    text-align: start;
+    width: 100%;
+    padding: 6px;
+}
